Fix hidden scrollbar in desktop view

--- a/src/components/Content/Content.sass
+++ b/src/components/Content/Content.sass
@@ -120,7 +120,6 @@
             font-size: 1.5rem
             font-weight: 500
         .link-button
-          display:block
           margin: auto
           height: 6rem
           width: 6rem
@@ -180,7 +179,7 @@
             margin-bottom: 2rem
             font-size: 4rem
         .filter-nav
-          overflow-x: scroll
+          overflow-x: auto
           scroll-behavior: smooth
           margin-bottom: 1rem
           > div
